<resources>
    <string name="app_name">A-Z for Kids</string>
    <string name="action_settings">Settings</string>
    <string name="grid">Grid</string>
    <string name="title_activity_slider">SliderActivity</string>
    <string name="content">Content</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="reply">Replay</string>
    <string name="puzzles">Puzzles</string>
    <string name="spell_it">Spell It</string>
    <string name="find_image">Find Image</string>
    <string name="admob_banner_id">ca-app-pub-1841174173430884/1192379059</string>
    <string name="admob_interstitial_id">ca-app-pub-1841174173430884/5622578655</string>
    <string name="main_bg">Main Bg</string>
    <string name="lets_count">Let\'s Count</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="find_a_pair">Find a Pair</string>
    <string name="refresh">Refresh</string>
    <string name="play">Play</string>
    <string name="spell">Spell</string>
    <string name="speak">Speak</string>
    <string name="alphabets">Alphabets</string>
    <string name="numbers">Numbers</string>
    <string name="colors">Colors</string>
    <string name="shapes">Shapes</string>
    <string name="animals">Animals</string>
    <string name="fruits">Fruits</string>
    <string name="vegetables">Vegetables</string>
    <string name="vehicles">Vehicles</string>
    <string name="body_parts">Body Parts</string>
    <string name="random">Random</string>
    <string name="sound">Sound</string>
    <string name="auto_play">Auto Play</string>
    <string name="set_interval">Set Interval :</string>
    <string name="prompt">Choose Interval</string>
    <string name="ok">OK</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="no_thanks">No, thanks</string>
    <string name="rate_content">If you enjoy using this app, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_title">Rate ABC flash cards and Games</string>
    <string name="home">Home</string>

    <string-array name="intervals">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
